tests/snapshots/yaml_suite_snapshots__yaml_suite_L24T_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Trailing line of spaces
  from: "@ingydotnet"
  tags: whitespace
  yaml: "foo: |\n  x\n␣␣␣\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :foo\n   =VAL |x\\n \\n\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"foo\" : \"x\\n \\n\"\n}\n"
  emit: "---\nfoo: \"x\\n \\n\"\n"
- yaml: "foo: |\n  x\n␣␣␣∎\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :foo\n   =VAL |x\\n \\n\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"foo\" : \"x\\n \\n\"\n}\n"
  emit: "---\nfoo: \"x\\n \\n\"\n"
