tests/snapshots/yaml_suite_snapshots__yaml_suite_L24T_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- emit: "---\nfoo: \"x\\n \\n\"\n"
  from: "@ingydotnet"
  json: "{\n  \"foo\" : \"x\\n \\n\"\n}\n"
  name: Trailing line of spaces
  tags: whitespace
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :foo\n   =VAL |x\\n \\n\n  -MAP\n -DOC\n-STR\n"
  yaml: "foo: |\n  x\n␣␣␣\n"
- emit: "---\nfoo: \"x\\n \\n\"\n"
  json: "{\n  \"foo\" : \"x\\n \\n\"\n}\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :foo\n   =VAL |x\\n \\n\n  -MAP\n -DOC\n-STR\n"
  yaml: "foo: |\n  x\n␣␣␣∎\n"
