tests/snapshots/yaml_suite_snapshots__yaml_suite_L383_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Two scalar docs with trailing comments
  from: "@ingydotnet"
  tags: comment
  yaml: "--- foo  # comment\n--- foo  # comment\n"
  tree: "+STR\n +DOC ---\n  =VAL :foo\n -DOC\n +DOC ---\n  =VAL :foo\n -DOC\n-STR\n"
  json: "\"foo\"\n\"foo\"\n"
  dump: "--- foo\n--- foo\n"
