tests/snapshots/yaml_suite_snapshots__yaml_suite_L383_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "--- foo\n--- foo\n"
  from: "@ingydotnet"
  json: "\"foo\"\n\"foo\"\n"
  name: Two scalar docs with trailing comments
  tags: comment
  tree: "+STR\n +DOC ---\n  =VAL :foo\n -DOC\n +DOC ---\n  =VAL :foo\n -DOC\n-STR\n"
  yaml: "--- foo  # comment\n--- foo  # comment\n"
