tests/snapshots/yaml_suite_snapshots__yaml_suite_L94M_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Tags in Explicit Mapping
  from: NimYAML tests
  tags: explicit-key tag mapping
  yaml: "? !!str a\n: !!int 47\n? c\n: !!str d\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL <tag:yaml.org,2002:str> :a\n   =VAL <tag:yaml.org,2002:int> :47\n   =VAL :c\n   =VAL <tag:yaml.org,2002:str> :d\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"a\": 47,\n  \"c\": \"d\"\n}\n"
  dump: "!!str a: !!int 47\nc: !!str d\n"
